Added due dates

--- a/popup.html
+++ b/popup.html
@@ -72,6 +72,9 @@
 
     <!-- Results Section -->
     <div id="results-container" class="results-container">
+      <!-- Due Planner (shown when search is empty) -->
+      <div id="due-planner" class="due-planner hidden"></div>
+
       <div class="empty-state" id="empty-state">
         <div class="empty-icon">
           <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
